--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "prebuild": "expo prebuild",
+    "build:detox": "bun run prebuild && detox build --configuration android.emu.debug",
+    "test:detox": "bun run prebuild && detox test --configuration android.emu.debug"
   },
   "jest": {
     "preset": "jest-expo"
@@ -45,7 +48,9 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
-    "jest": "^29.2.1",
+    "detox": "^20.36.3",
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
     "jest-expo": "~52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
