--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll",
     "lint": "expo lint",
-    "prebuild": "expo prebuild",
+    "prebuild": "expo prebuild -p android",
     "build:detox": "bun run prebuild && detox build --configuration android.emu.debug",
     "test:detox": "bun run prebuild && detox test --configuration android.emu.debug"
   },
@@ -36,10 +35,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5"
   },
@@ -55,5 +54,6 @@
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
