test ci emulator

--- a/.github/workflows/android_setup.yaml
+++ b/.github/workflows/android_setup.yaml
@@ -1,3 +1,8 @@
+
+name: emulator setup ci
+on:
+  push:
+    branches: ["**"] # glob pattern to allow slash /
 jobs:
   test:
     runs-on: ubuntu-latest
