--- a/.github/workflows/android_setup.yaml
+++ b/.github/workflows/android_setup.yaml
@@ -31,6 +31,14 @@ jobs:
             ~/.android/adb*
           key: avd-${{ matrix.api-level }}
 
+      - uses: oven-sh/setup-bun@v2
+
+      - name: bun install
+        run: bun install
+
+      - name: install maestro
+        uses: dniHze/maestro-test-action@v1
+
       - name: create AVD and generate snapshot for caching
         if: steps.avd-cache.outputs.cache-hit != 'true'
         uses: reactivecircus/android-emulator-runner@v2
@@ -41,6 +49,10 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
+      - name: start background
+        run: bun expo run:android &
+
+
       - name: run tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
@@ -48,4 +60,4 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: ./gradlew connectedCheck
+          script: maestro test maestro/home.yml --format=junit --output=report.xml
