--- a/.github/workflows/android_setup.yaml
+++ b/.github/workflows/android_setup.yaml
@@ -49,8 +49,8 @@ jobs:
           disable-animations: false
           script: echo "Generated AVD snapshot for caching."
 
-      - name: start background
-        run: bun expo run:android &
+      # - name: start background
+      #   run: bun expo run:android &
 
 
       - name: run tests
@@ -60,4 +60,5 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: maestro test maestro/home.yml --format=junit --output=report.xml
+          script: bun expo run:android
+          # script: maestro test maestro/home.yml --format=junit --output=report.xml
